# Zadacha3-4-semester

./: Auto.txt  Auto0.txt  Auto1.txt  CMakeLists.txt  ClntN.cpp  ClntN.h  ClntN0.cpp  ClntN0.h  ClntN1.cpp  ClntN1.h  ClntТ0.cpp  Data.txt  Data0.txt  Data1.txt  README.md  autotest.cpp  func.cpp  main.cpp  wh.h
